# ARbotics

./: .gitignore  OverviewARManager.uxf  README.md  README_Jonas_lernt.md  project_overview.drawio
.config/: .vsconfig  conda-ARbotics.yml
ARManager/: .gitignore
ARManager/Assets/: TestScript.cs  WSATestCertificate.pfx
ARManager/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
AR_Manager/src/: first_api.py  flask_learning.py  main.py
Docker/: docker-compose-dev.yml  docker-compose.yml  gazebo.yml
Docker/compose_files/: docker-compose-without-manager.yml  docker-seperated.yml  gazebo.yml
Docker/ros1_2_base/: Dockerfile
Docker/ros1_2_bridge/: Dockerfile
Docker/ros1_anymal/: Dockerfile  standalone_ar.launch
Docker/ros1_ar_manager/: Dockerfile
Docker/ros1_base/: Dockerfile
Docker/ros1_gazebo/: Dockerfile  ur_install.sh
Docker/ros1_moveit/: Dockerfile  moveit_install.sh
Docker/ros1_ros-sharp/: Dockerfile  entrypoint.sh  rossharp_install.sh
Docker/ros1_ur_rossharp/ur_rossharp/: CMakeLists.txt  moveit_test.py  package.xml  rest_keyboard_interface.py  test.py  ur5_demo.py  ur5_demo_script.py  ur5_demo_unity.py
Docker/ros1_ur_rossharp/ur_rossharp/launch/: ur5_rossharp.launch
Docs/: project_overview.drawio
HololensTests/: .gitignore
Python/: roslibpy_test.py  vispy_test.py
RosSharp/: README.md
RosSharpRobotImporter/: .gitignore
Tooltips/: .gitignore
Tooltips_Python/: imageserver.py  rlp.py  ros_controller.py  ros_imageserver.py
roslibpy/: rest_keyboard_interface.py  roslibpy_helper.py  send_euclidean_goal_pose.py
(+699 files in other folders)
