<?xml version="1.0"?>
<package format="2">
  <name>ur_rossharp</name>
  <version>1.2.5</version>
  <description>
      Rossharp UR5
  </description>


  <author>Jonas Frey</author>
  <maintainer email="jonfrey@student.ethz.ch">Jonas Frey</maintainer>

  <license>BSD</license>

  <url type="website">http://to.do</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <build_depend>message_generation</build_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
 
  <export>
  </export>
</package>
